[package]
name = "dislog-hal-curve25519"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>", "xujian009 <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
curve25519-dalek = "2"
rand = "0.7.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
